fix numbers page when on mobile

--- a/assets/scss/pages/_numbers.scss
+++ b/assets/scss/pages/_numbers.scss
@@ -57,7 +57,7 @@
         }
         .slick-prev,
         .slick-next {
-            top: 97%;
+            top: calc(100% - 30px);
         }
     }
 }
